# Detective-of-Fake-News-System

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_TODAY.md  DEPLOY_RENDER.md  DOCUMENTATION.md  Dockerfile  GITLAB.md  INVESTOR_ONE_PAGER.md  LICENSE  MAINTENANCE.md  Makefile  PRODUCT_AUTOMATION.md  README.md  SECURITY.md  SETUP_TEST_NOW.md  bandit.yaml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.bat  run.ps1  streamlit_app.py  tasks.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
artifacts/: metrics.json
artifacts/classical/: keyword_hints.json  logreg_tfidf.joblib
docs/: COMPLIANCE.md  OPEN_SOURCE.md
fake_news_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
newstrust/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
notebooks/: 01_teaching_walkthrough.ipynb  02_metrics_and_overfitting.ipynb  03_automation_product_and_model_zoo.ipynb
platformapp/: apps.py  jobs.py  models.py  operations.py  services.py  urls.py  views.py
platformapp/migrations/: 0001_initial.py  0002_case_caseevent_and_more.py  0003_rssfeed_scoredarticle.py
scripts/: run.sh  smoke_analyze.py
src/: __init__.py  config.py
src/api/: __init__.py  __main__.py  deps.py  schemas.py  usage_store.py
src/data/: build_dataset.py  (+1 more)
static/: app.js  index.html  styles.css
tests/: test_api.py  test_doctor.py
web/: index.html
(+16 files in other folders)
