[build-system]
requires = ["setuptools>=69", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-news-detection"
version = "0.2.0"
description = "Fake news draft scoring: data build, classical + Keras models, Django platform UI, MLflow hooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Skills Marathon / maintainers" }]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0,<1.8.0",
    "regex>=2024.0.0",
    "django>=5.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "invoke>=2.2.0",
]
training = [
    "datasets>=3.0.0",
    "huggingface_hub>=0.24.0",
    "tensorflow>=2.16.0",
]
tracking = [
    "mlflow>=3.0.0",
]

[project.scripts]
news-trust-platform = "src.api.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "newstrust*", "platformapp*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "newstrust.settings"
